抽出了BaseActivity 进入了沉浸式状态栏

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="register_title_word">#fff</color>
     <color name="register_find_pwd">#50cccc</color>
     <color name="login_clause">#50cccc</color>
+    <color name="status_color">#50cccc</color>
 
 </resources>
