--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:fitsSystemWindows="true"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
@@ -100,7 +101,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/btn_register_selector"
-            android:onClick="RegisterDeal"
+            android:onClick="LoginDeal"
             android:text="立即登录"
             android:textColor="@color/colorWhite"
             android:textSize="18sp"/>
