重新布局了一下 返回图标 解决之前触摸面积小的问题。 重置密码写完 等待测试

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -15,16 +15,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
             android:onClick="BackToPrePager"
+            android:layout_marginLeft="5dp"
+            android:padding="16dp"
             android:src="@drawable/back"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:layout_toEndOf="@+id/imageView"
             android:layout_toRightOf="@+id/imageView"
             android:text="登录"
@@ -91,7 +92,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:onClick="FindPwd"
-            android:text="忘记密码"
+            android:text="忘记密码?"
             android:textColor="@color/register_find_pwd"/>
 
         <Button
