主页框架搭完，图标文字 后期适配再调整。 重置密码未测试

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,13 @@
     <color name="colorBule">#33ccff</color>
     <color name="update_background_color">#fff</color>
     <color name="register_title_background">#50cccc</color>
-    <color name="register_title_word">#fff</color>
+    <color name="title_word_color">#fff</color>
     <color name="register_find_pwd">#50cccc</color>
     <color name="login_clause">#50cccc</color>
     <color name="status_color">#50cccc</color>
     <color name="word_color">#CCCCCC</color>
+    <color name="word_normal_color">#CCCCCC</color>
+    <color name="word_pressed_color">#50cccc</color>
+    <color name="course_title_color">#50cccc</color>
 
 </resources>
