--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -29,7 +29,7 @@
             android:layout_toEndOf="@+id/imageView"
             android:layout_toRightOf="@+id/imageView"
             android:text="登录"
-            android:textColor="@color/register_title_word"
+            android:textColor="@color/title_word_color"
             android:textSize="16sp"/>
 
         <TextView
@@ -42,7 +42,7 @@
             android:clickable="true"
             android:onClick="TurnToRegister"
             android:text="注册"
-            android:textColor="@color/register_title_word"
+            android:textColor="@color/title_word_color"
             android:textSize="16sp"/>
     </RelativeLayout>
 
