--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -29,7 +29,7 @@
             android:layout_toEndOf="@+id/imageView"
             android:layout_toRightOf="@+id/imageView"
             android:text="重置密码"
-            android:textColor="@color/register_title_word"
+            android:textColor="@color/title_word_color"
             android:textSize="16sp"/>
     </RelativeLayout>
 
