--- a/app/src/main/res/layout/course_fragment.xml
+++ b/app/src/main/res/layout/course_fragment.xml
@@ -7,7 +7,7 @@
 
     <include layout="@layout/course_top"/>
 
-    <android.support.v4.view.ViewPager
+    <com.upc.learnmooc.view.TopCourseViewPager
         android:id="@+id/vp_top_course"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
