重构了一下课程主页的代码，更换了头部轮播的实现方法，课程主页的第一层全部完成包括轮播，课程列表的分页加载，缓存处理和无网络时的缓存加载；下拉刷新。

--- a/app/src/main/res/layout/course_fragment.xml
+++ b/app/src/main/res/layout/course_fragment.xml
@@ -9,7 +9,7 @@
 
     <include layout="@layout/course_top"/>
 
-    <ListView
+    <com.upc.learnmooc.view.RefreshListView
         android:id="@+id/lv_list_course"
         android:layout_width="match_parent"
         android:divider="@null"
