前段时间一直没提交，这次的有 历史记录（时间轴效果） 文章列表 webview加载文章(包括文章收藏)  以及做的一部分缓存处理

--- a/app/src/main/res/layout/classify_activity.xml
+++ b/app/src/main/res/layout/classify_activity.xml
@@ -9,6 +9,7 @@
 
     <ExpandableListView
         android:divider="@null"
+        android:scrollbars="none"
         android:id="@+id/el_course_classify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
