--- a/app/src/main/res/drawable/shadow.xml
+++ b/app/src/main/res/drawable/shadow.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="90"
-                android:startColor="#AABBBBBB"
+                android:startColor="#6E6E6E"
                 android:centerColor="#0DBBBBBB"
                 android:endColor="#05BBBBBB"/>
         </shape>
