--- a/app/src/main/res/layout/course_top.xml
+++ b/app/src/main/res/layout/course_top.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent">
 
     <ImageView
-        android:id="@+id/iv_classify"
+        android:id="@+id/iv_history"
         android:layout_centerVertical="true"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -19,8 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
-        android:layout_toEndOf="@+id/iv_classify"
-        android:layout_toRightOf="@+id/iv_classify"
+        android:layout_toEndOf="@+id/iv_history"
+        android:layout_toRightOf="@+id/iv_history"
         android:layout_width="wrap_content"
         android:onClick="TurnToLogin"
         android:text="分类"
