--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,9 +15,12 @@
     <color name="word_pressed_color">#56abe4</color>
     <color name="course_title_color">#56abe4</color>
     <color name="main_course_word_color">#000000</color>
-    <color name="layout_divider_color">#ECECEC</color>
+    <color name="history_course_name_color">#363636</color>
+    <color name="layout_divider_color">#CCCCCC</color>
     <color name="top_bar_color">#56abe4</color>
     <color name="mine_bg_color">#474947</color>
     <color name="mine_bg_word_color">#84817F</color>
+    <color name="test">#A6A6A6</color>
+    <color name="normal_community_word">#89ffffff</color>
 
 </resources>
